# prescriptionsforpatients

./: .cfnlintrc  .gitallowed  .gitignore  .gitleaksignore  .grype.yaml  .npmrc  .pre-commit-config.yaml  .releaserc  .tool-versions  .trivyignore.yaml  CONTRIBUTING.md  Gemfile  Makefile  README.md  _config.yml  eslint.config.mjs  index.html  int.html  jest.default.config.ts  nhsdigital-eps-cdk-constructs-1.6.0.tgz  package-lock.json  package.json  prescriptions-api.yaml  pyproject.toml  ref.html  release.config.js  results.json  samconfig.toml  samconfig_package_and_deploy.toml  sandbox_template.yaml  sbom-node.json  sonar-project.properties  template.env  template.yaml  template_splunk_firehose.yaml  test.sh  tsconfig.build.json  tsconfig.defaults.json  tsconfig.json  vitest.default.config.ts  (+8 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  ignored_security_issues.json  pull_request_template.md
SAMtemplates/: lambda_resources.old.yaml  lambda_resources.yaml  main_template.old.yaml  main_template.yaml  sandbox_template.yaml  splunk_firehose_resources.yaml
_data/: dev_deployments.csv  dev_latest.csv  int-sandbox_deployments.csv  int-sandbox_latest.csv  int_deployments.csv  int_latest.csv  internal-dev-sandbox_deployments.csv  internal-dev-sandbox_latest.csv  internal-dev_deployments.csv  internal-dev_latest.csv  internal-qa_deployments.csv  internal-qa_latest.csv  prod_deployments.csv  prod_latest.csv  recovery_deployments.csv  recovery_latest.csv  ref_deployments.csv  ref_latest.csv  sandbox_deployments.csv  sandbox_latest.csv
cloudformation/: README.md  account_resources.yml  account_resources_1.yml  ci_resources.yml  ci_resources_dev_1.yml  ci_resources_dev_2.yml  ci_resources_int_1.yml  ci_resources_int_2.yml  ci_resources_prod_1.yml  ci_resources_prod_2.yml  ci_resources_qa_1.yml  ci_resources_qa_2.yml  ci_resources_ref_1.yml  ci_resources_ref_2.yml  environment_route53.yml  management_route53.yml  resources_to_import.ref  resources_to_import_dev.txt  resources_to_import_int.json  resources_to_import_prod.json  resources_to_import_qa.json  resources_to_import_ref.json  vpc_resources.yml
docs/: pfp-AEA-5947-proxy-access.puml  pfp-AS-IS.puml  pfp-bundle-path.md  pfp-path.md
postman/: README.md  (+1 more)
privateCA/: .gitignore  README.md  (+1 more)
(+88 files in other folders)
