[project]
python = "^3.14"
name = "prescriptionsforpatients"

[tool.poetry]
name = "prescriptionsforpatients"
version = "0.0.1-alpha"
description = "Prescriptions API Definitions"
license = "MIT"
authors = [
    "EPS team <esp_team@nhs.net>"
]
readme = "README.md"
repository = "https://github.com/NHSDigital/prescriptionsforpatients"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
requests = "^2.32.3"
argparse = "^1.4.0"
pre-commit = "^4.1.0"
cfn-lint = "^1.27.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
cfn-lint = "^1.27.0"
black = "^25.1.0"
flake8 = "^7.1.2"
pip-licenses = "^5.0.0"

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
